# C

./: .gitignore  C++STL-base-and-application  C++STL-base-and-application.cpp  Introduction.md  README.md  STLtest.cpp  input.txt  test  test.cpp  test.h  test.out
CPP/: C++STL-base-and-application  C++STL-base-and-application.cpp  README.md  STLtest.cpp  classifier  input.txt  test  test.cpp  test.h
CPP/CMake/CMakeDemo/Demo1/: CMakeLists.txt
CPP/CMake/CMakeDemo/Demo3/: CMakeLists.txt
CPP/CMake/CMakeDemo/Demo3/math/: CMakeLists.txt
CPP/CMake/CMakeDemo/Demo4/: CMakeLists.txt  main.cc
CPP/CMake/CMakeDemo/Demo5/: CMakeLists.txt  CPackConfig.cmake
CPP/CMake/cmake-cookbook/chapter-02/recipe-06/cxx-example/: CMakeLists.txt  linear-algebra.cpp
CPP/CMake/cmake-cookbook/chapter-03/recipe-01/example/: CMakeLists.txt
CPP/CMake/cmake-cookbook/chapter-03/recipe-05/cxx-example/: CMakeLists.txt
CPP/CMake/cmake-cookbook/chapter-06/recipe-04/c-example/: CMakeLists.txt
CPP/CMake/cmake-cookbook/chapter-07/recipe-01/cxx-example/: CMakeLists.txt
CPP/CMake/cmake-cookbook/chapter-07/recipe-01/cxx-example/src/: CMakeLists.txt
CPP/CMakeDemo/Demo1/: test.cpp
CPP/CMakeDemo/Demo2/: CMakeLists.txt
CPP/CMakeDemo/Demo3/: CMakeLists.txt
CPP/CMakeDemo/Demo4/: CMakeLists.txt
CPP/CMakeDemo/Demo5/: CMakeLists.txt  CPackSourceConfig.cmake  Demo8-1.0.1-Darwin.sh
CPP/CMakeDemo/Demo5/math/: CMakeLists.txt
CPP/Cpp-Primer-Plus-6th/bookcodes/chapter13/: dma.cpp
CPP/Cpp-Primer-Plus-6th/bookcodes/chapter14/: studentc.h  tempparm.cpp  tmp2tmp.cpp
CPP/Cpp-Primer-Plus-6th/bookcodes/chapter15/: tv.h
CPP/Cpp-Primer-Plus-6th/bookcodes/chapter16/: fowl.cpp
CPP/Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake
CPP/Demo2/: main.cc
CPP/Demo3/: CMakeLists.txt
CPP/HPC_code/: compute_1  compute_1.cpp  compute_2  compute_2.cpp  hello_world  hello_world.cpp  openmp  openmp.cpp  pro3  pro3.cpp  test  test.cpp
CPP/Leetcode/: 1137.高度检查器.cpp
CPP/OtherFile/: C++PrimerPlus.cpp  pybindtest.cpp  run.sh
CPP/book-effective model cpp/Effective-Modern-Cpp/Item01_Understand_template_type_deduction/: CMakeLists.txt
CPP/book-effective model cpp/Effective-Modern-Cpp/Item06_Use_the_explicitly_typed_initializer_idiom_when_auto_deduces_undesired_types/: explicitly_typed_initializer_idiom.cpp
CPP/classDisign2/grammer/: grammerAnalysis.cpp
CPP/githubCPPThings/basic_content/c_poly/: c_examp.c
CPP/intelligentComputing/experiment1/: IntelligenceComputing.cpp  graph.txt  input.txt  input2.txt
CPP/intelligentComputing/experiment2/: GameTree.cpp  output_depth_2_without_duplicated.txt  output_depth_4_without_duplicated.txt  output_depth_6_with_duplicated.txt
CPP/intelligentComputing/experiment3/: graph.txt  output_100x100_RAND_OBSTACLES_2000.txt  output_100x100_RAND_OBSTACLES_500.txt  output_50x50_RAND_OBSTACLES_500.txt  search.cpp
CPP/pybind11_test/cmake_cpp_pybind11_tutorial/: CMakeLists.txt
CPP/pybind11_test/cmake_cpp_pybind11_tutorial/cpp/: CMakeLists.txt
CPP/pybind11_test/cmake_cpp_pybind11_tutorial/cpp/src/: motorcycle.cpp
CPP/pybind11_test/cmake_cpp_pybind11_tutorial/cpp/tests/: CMakeLists.txt
CPP/pybind11_test/cmake_cpp_pybind11_tutorial/cpp/tests/src/: test_cpp.cpp
CPP/pybind11_test/cpp调用Python/example2/: CMakeLists.txt  example.cpp  myadd.py
CPP/pybind11_test/example1/: example.cpp  example2.cpp  example3.cpp  example4.cpp  example_py.py  test.cpp
CPP/pybind11_test/example3/: add.cpp  div.cpp  functions.h  functions_wrapper.cpp  mul.cpp  setup.py  sub.cpp
CPP/testFile/: C++STL-base-and-application  C++STL-base-and-application.cpp  STLtest  STLtest.cpp  atomic_test.cpp  classifier.cpp  count  count.cpp  test.cpp
HPC_P1/: document.tex
HPC_P2/: __latexindent_temp.tex  problem2.tex
HPC_P3/: .aux  csnameendcsname.tex  pro3.md  pro3_tex.aux  pro3_tex.synctex(busy)  pro3_tex.tex
HPC_P4/: code.txt  pro4.tex
HTML/: Echarts.html  area-simple.html  dataset-series-layout-by.html  doc-example_tutorial-dynamic-data.html  test.html
Latex/: LatexTest.tex
Latex/B站机器学习/: README.md
Latex/B站机器学习/笔记tex版本/11高斯过程/: 1.tex  (+2 more)
Latex/new/: A novel multi-label learning approach for missing label and noisy label.tex
Latex/testFile/: LatexTest.aux  LatexTest.tex  LatexTest.toc
Latex/translation/: __latexindent_temp.tex  egbib.bib  trans.aux  trans.tex
Latex/translation_tmp/: ref.bib  trans.aux  trans.tex
Python/: cxvoptimization.ipynb  全局变量和私有变量.py
Python/Flask-Web开发/前三章/: flask测试.py
Python/Object Detection/yolov3_detection_realtime/: cam_demo.py  detect.py  util.py  video_demo.py
Python/cvxpy_examples/: MMCF.ipynb  admm_example.py  admm_lasso.py  admm_svm_pool.py
Python/opencv/: 条形码检测.py
Python/paper/: main.py
Python/paper/CentroidEstimation/: main.py
Python/testFile/: collection_test.py  test.ipynb  test.py  全局变量和私有变量.py
Python/机器学习/: SpectralClustering.py  pytorch计算hessian矩阵.ipynb
Python/机器学习/AcceleratedSGDMethods/: my_cnn.py
Python/机器学习/B站机器学习/: README.md
Python/机器学习/Conjugate-Gradient/: CG.py  CG03.ipynb  CG04.ipynb  CG07.ipynb
Python/机器学习/DL/: LSTM神经网络时间序列长期预测.ipynb
Python/机器学习/Deeplearning花书/: chapter5.py  chapter6.py
Python/机器学习/ML_notes_/: README.md
Python/机器学习/NLP/: in_the_name_of_people.txt  in_the_name_of_people_segment.txt
Python/机器学习/RNN实现/: RNN.py
Python/机器学习/learning/: EM+GMM.ipynb  HMM.ipynb  Logistic.ipynb  optimization.py  utils.py  决策树.ipynb  拟牛顿法优化算法.ipynb  最大熵模型.ipynb  聚类.ipynb  采样.ipynb
Python/机器学习/one-class-svm/: one-class_SVM.ipynb
Python/机器学习/sklearnExample/: 参数自动化搜索.ipynb
Python/深度学习入门与实践/: Digraph.gv  test.py  第三章 PyTorch深度神经网络及训练.py  第五章 全连接神经网络.py  第六章 TextCNN测试.py  第六章 卷积神经网络.py  第四章 基于PyTorch的相关可视化工具.py
Python/网络爬虫/: test.py
Python/网络爬虫/第七章/: Selenium使用.py  使用selenium爬取淘宝商品.py
Python/网络爬虫/第三章/: result.txt  猫眼电影.py
Python/网络爬虫/第五章/: data.csv  data.json  data1.json  数据存储.py
Python/网络爬虫/第八章/: 滑块识别.py
Python/网络爬虫/第六章/: 头条图片内容抓取.py  抓取微博发帖内容.py
Python/网络爬虫/第四章/: 解析库使用方法.py
markdown/: metaleanring.md  report.md  test.md  test_.md
tex/: document.aux  document.out  document.tex
(+427 files in other folders)
